Bevel weight strange behaviour #37534

Closed
opened 2013-11-19 09:53:07 +01:00 by Mikhail Rachinskiy · 14 comments

System Information
Windows 8 x64
Renderer: GeForce GTX 650/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: r61240 Build Bot Official
Worked: 2.69 Release

Short description of error
Bevel weight behaving strange on a simple cube and not working at all on circular topology.

Also bevel weight display is disabled by default in edit mode "Mesh Display" options. I believe it should be enabled as "Mean Crease" display and "Sharp Edges" display (which is disabled by default, but automatically enables as soon as you assign sharp edge).

Exact steps for others to reproduce the error
All explanations in attached blend file.
bevel_weight.blend

Plus screenshot.
bevel_weight.png

**System Information** Windows 8 x64 Renderer: GeForce GTX 650/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: r61240 Build Bot Official Worked: 2.69 Release **Short description of error** Bevel weight behaving strange on a simple cube and not working at all on circular topology. Also bevel weight display is disabled by default in edit mode "Mesh Display" options. I believe it should be enabled as "Mean Crease" display and "Sharp Edges" display (which is disabled by default, but automatically enables as soon as you assign sharp edge). **Exact steps for others to reproduce the error** All explanations in attached blend file. [bevel_weight.blend](https://archive.blender.org/developer/F28752/bevel_weight.blend) Plus screenshot. ![bevel_weight.png](https://archive.blender.org/developer/F28753/bevel_weight.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Howard Trickey was assigned by Bastien Montagne 2013-11-19 12:11:52 +01:00

Added subscriber: @mont29

Added subscriber: @mont29
Author
Member

Seems that Howard have fixed the issue, task can be closed now.

But it's still would be nice if you guys allow Bevel Weight display by default, every other overlay (except Vertex weight) is turn on by default.

Seems that Howard have fixed the issue, task can be closed now. But it's still would be nice if you guys allow Bevel Weight display by default, every other overlay (except Vertex weight) is turn on by default.
Member

I will consult with other modeling team members to see if they agree with turning on Bevel Weight display by default before closing this task.

I will consult with other modeling team members to see if they agree with turning on Bevel Weight display by default before closing this task.
Member

The Bevel Weight isn't on by default for performance reasons.
Consensus opinion is that it should be turned on as soon as you edit them on a mesh.
Also it should perhaps be in color instead of just thicker black.

The Bevel Weight isn't on by default for performance reasons. Consensus opinion is that it should be turned on as soon as you edit them on a mesh. Also it should perhaps be in color instead of just thicker black.
Author
Member

Sure, turned on as soon as you edit is a good solution.

Also it should perhaps be in color instead of just thicker black.

It is always been orange in default theme.

Sure, turned on as soon as you edit is a good solution. >Also it should perhaps be in color instead of just thicker black. It is always been orange in default theme.
Author
Member

I guess this task could be closed now, despite that automatic Edge Bevel Weight overlay wasn't been implemented, it is not the topic of this very bug report.

I guess this task could be closed now, despite that automatic Edge Bevel Weight overlay wasn't been implemented, it is not the topic of this very bug report.

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey

@howardt, what'd be an action here?

@howardt, what'd be an action here?
Member

The bug in this report has been fixed. What remains is a feature request that is easy to do: just copy what Blender does to turn on crease and sharp edge display as soon as any edge gets one of those values edited / changed from the default. Will try to do soon after the 2.71 release.

The bug in this report has been fixed. What remains is a feature request that is easy to do: just copy what Blender does to turn on crease and sharp edge display as soon as any edge gets one of those values edited / changed from the default. Will try to do soon after the 2.71 release.

This issue was referenced by 8f15be2fee

This issue was referenced by 8f15be2feef6b4aee3c7de34080ccdd5bbad6658
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 8f15be2fee.

Closed by commit 8f15be2fee.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37534
No description provided.